--- a/templates/form.html
+++ b/templates/form.html
@@ -3,23 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>図書アプリ</title>
+    <title>購入本管理アプリ</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
-    <h1>気まぐれ書店</h1>
+    <h1>購入本管理アプリ</h1>
     <!-- post:データを送る、get:データを取得 -->
     <form method="post" action="{{ url_for('register') }}">
         <table>
             <tr>
-                <th>入荷日</th>
                 <th>タイトル</th>
-                <th>価格</th>
+                <th>購入日</th>
+                <th>目標日</th>
             </tr>
             <tr>
-                <td><input type="text" name="arrival_day"></td>
                 <td><input type="text" name="title"></td>
-                <td><input type="text" name="price"></td>
+                <td><input type="text" name="date_of_purchase"></td>
+                <td><input type="text" name="aim_day"></td>
             </tr>
         </table>
         <br>
